syntax = "proto3";

package pb;

option go_package = "./pb";

service Raft {
	// Membership management
	rpc AddServer (AddServerRequest) returns (AddServerResponse) {}
	rpc ListServers (ListServersRequest) returns (ListServersResponse) {}

	// Core impl
	rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
	rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse) {}
}

message AddServerRequest {
  string name = 1;
}

message AddServerResponse {
  string message = 1;
}

message ListServersRequest {}

message ListServersResponse {
  string message = 1;
}

message AppendEntriesRequest {
	int64 term = 1;
	string leaderId = 2;
	int64 prevLogIndex = 3;
	int64 prevLogTerm = 4;

	message logEntry {
		int64 index = 1;
		int64 term = 2;
		string data = 3;
	}

	repeated logEntry entries = 5;
	string leaderCommit = 6;
}

message AppendEntriesResponse {
	int64 term = 1;
	bool success = 2;
}

message RequestVoteRequest {
	int64 term = 1;
	string candidateId = 2;
	string lastLogIndex = 3;
	string lastLogTerm = 4;
}

message RequestVoteResponse {
	int64 term = 1;
	bool voteGranted = 2;
}
